--- a/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution.BackendApi/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://webapi.tedu.com.vn"
   }
 }
